--- a/rxWebReport/Web.config
+++ b/rxWebReport/Web.config
@@ -17,7 +17,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=RxApp;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MySqlAgylitiConnection" connectionString="201.16.197.252;Database=zabbix;User Id=jasaude2;Password=C4m4l340;" providerName="MySql.Data.MySqlClient" />
+    <add name="MySqlAgylitiConnection" connectionString="Server=201.16.197.252;Database=zabbix;User Id=jasaude2;Password=C4m4l340;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="mqttServer" value="iot.agyliti.com.br" />
@@ -199,6 +199,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Security.Cryptography.ProtectedData" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
