--- a/rxWebReport/packages.config
+++ b/rxWebReport/packages.config
@@ -48,6 +48,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="MQTTnet" version="3.0.16" targetFramework="net461" />
   <package id="MQTTnet.Extensions.ManagedClient" version="3.0.16" targetFramework="net461" />
+  <package id="MySql.Data" version="6.10.9" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net461" />
